# Income-Divider-in-Rust

./: Cargo.toml  README.md
src/: main.rs
ui/: appwindow.slint
